--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,39 @@
   <artifactId>moviebase</artifactId>
   <version>2.0</version>
   <name>moviebase</name>
+  
+  	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>15.0</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+
+		<!-- declares the current project depends on another project mvn_example_1 
+			<dependency> <groupId>com.vmware</groupId> <artifactId>mvn_example_1</artifactId> 
+			<version>2.0-SNAPSHOT</version> </dependency> -->
+
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8.7</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	</dependencies>
 </project>
