--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.vmware</groupId>
 	<artifactId>moviebase</artifactId>
-	<version>2.0</version>
+	<version>3.0</version>
 	<name>moviebase</name>
 
 	<dependencies>
@@ -14,11 +14,6 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
-		
-		<!-- declares the current project depends on another project mvn_example_1 
-			<dependency> <groupId>com.vmware</groupId> <artifactId>mvn_example_1</artifactId> 
-			<version>2.0-SNAPSHOT</version> </dependency> -->
-
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
@@ -43,7 +38,18 @@
 					<suiteXmlFiles>
 						<suiteXmlFile>${project.build.testOutputDirectory}/testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
-				</configuration>	
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+				   <formats>
+				      <format>html</format>
+				      <format>xml</format>
+				   </formats>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
