--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,19 @@
 		</dependency>
 	</dependencies>
 
+	<distributionManagement>
+		<repository>
+			<id>localhost_nexus_releases</id>
+			<name>localhost Nexus releases repository</name>
+			<url>http://localhost:9090/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>localhost_nexus_snapshots</id>
+			<name>localhost Nexus snapshot repository</name>
+			<url>http://localhost:9090/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -45,10 +58,10 @@
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-				   <formats>
-				      <format>html</format>
-				      <format>xml</format>
-				   </formats>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
 				</configuration>
 			</plugin>
 		</plugins>
